@@ -12,10 +12,9 @@ InProj <- function(product) {
 
 ### output projection -----
 
-OutProj <- function(product, extent, opts = NULL, ...) {
+OutProj <- function(product, extent, ...) {
   
-  if (is.null(opts))
-    opts <- combineOptions(...)
+  opts <- combineOptions(...)
   
   cat("########################\n")
   if(!is.null(extent@target$outProj)) {
@@ -41,10 +40,9 @@ OutProj <- function(product, extent, opts = NULL, ...) {
 
 ### output pixel size -----
 
-PixelSize <- function(extent, opts = NULL, ...) {
+PixelSize <- function(extent, ...) {
   
-  if (is.null(opts))
-    opts <- combineOptions(...)
+  opts <- combineOptions(...)
   
   if(!is.null(extent@target$pixelSize)) {
     pixelSize <- extent@target$pixelSize
@@ -67,10 +65,9 @@ PixelSize <- function(extent, opts = NULL, ...) {
 
 ### resampling type -----
 
-ResamplingType <- function(opts = NULL, ...) {
+ResamplingType <- function(...) {
   
-  if (is.null(opts))
-    opts <- combineOptions(...)
+  opts <- combineOptions(...)
   
   opts$resamplingType <- checkResamplingType(opts$resamplingType, tool = "gdal")
   
@@ -110,10 +107,9 @@ TargetExtent <- function(extent, outProj) {
 
 ### block size -----
 
-BlockSize <- function(opts = NULL, ...) {
+BlockSize <- function(...) {
   
-  if (is.null(opts))
-    opts <- combineOptions(...)
+  opts <- combineOptions(...)
   
   if (is.null(opts$blockSize)) {
     NULL
@@ -126,10 +122,9 @@ BlockSize <- function(opts = NULL, ...) {
 
 ### output compression -----
 
-OutputCompression <- function(opts = NULL, ...) {
+OutputCompression <- function(...) {
 
-  if (is.null(opts))
-    opts <- combineOptions(...)
+  opts <- combineOptions(...)
   
   if (is.null(opts$compression)) {
     " -co compress=lzw -co predictor=2"
@@ -143,10 +138,9 @@ OutputCompression <- function(opts = NULL, ...) {
 
 ### quiet output -----
 
-QuietOutput <- function(opts = NULL, ...) {
+QuietOutput <- function(...) {
 
-  if (is.null(opts))
-    opts <- combineOptions(...)
+  opts <- combineOptions(...)
   
   ## if 'quiet = FALSE' or not available, show full console output
   if ("quiet" %in% names(opts)) {
